--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,9 @@
 /* tabelka */
+#costam{
+    text-align: center;
+    margin-top: 30px;
+    color: #000000;
+  }
 table {
     width: 100%;
     border-collapse: collapse;
